# waqediai

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yaml  main_waqedi-ai-api.yml
docs/architecture/: phase-0-strategic-foundation.md  phase-1-identity-authentication.md  phase-2-document-ingestion.md  phase-3-ocr-stt.md  phase-4-language-normalization.md  phase-5-knowledge-processing.md
frontend/ai-client/: .flutter-plugins-dependencies  README.md  pubspec.yaml
frontend/ai-client/.dart_tool/: package_config.json  package_graph.json
frontend/ai-client/.dart_tool/extension_discovery/: vs_code.json
frontend/ai-client/src/: main.dart
frontend/web-console/: README.md  middleware.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/web-console/.next/: app-build-manifest.json  trace
frontend/web-console/.next/server/: app-paths-manifest.json  edge-runtime-webpack.js  middleware.js  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/web-console/app/: globals.css  layout.tsx  page.tsx
frontend/web-console/components/: auth-modal.tsx
frontend/web-console/components/chat/: chat-composer.tsx  message-bubble.tsx  welcome-panel.tsx
frontend/web-console/components/documents/: document-card.tsx  document-list.tsx  index.ts  status-badge.tsx  upload-zone.tsx
frontend/web-console/core/: api-client.ts  auth-options.ts  auth-provider.tsx  guest-store.ts  jwt.ts  permissions.ts
frontend/web-console/hooks/: useAuth.ts  useRBAC.ts
frontend/web-console/services/: auth.ts  chat-service.ts  documents.ts  knowledge.ts
frontend/web-console/types/: next-auth.d.ts
infra/docker/: docker-compose.yaml  init-db.sql
infra/docker/migrations/: 001_identity_schema.sql  002_documents_schema.sql  003_extraction_schema.sql  004_language_schema.sql  005_knowledge_schema.sql  006_identity_oauth.sql
infra/docker/prometheus/: prometheus.yml
libs/common/: __init__.py  config.py  errors.py  models.py  pyproject.toml  utils.py
libs/observability/: __init__.py  logging.py  metrics.py  pyproject.toml  tracing.py
services/_template/: README.md
services/_template/src/service_name/: config.py
services/_template/tests/: conftest.py
services/_template/tests/unit/: test_main.py
services/auth-service/: Dockerfile  pyproject.toml  requirements.txt
services/auth-service/src/auth_service/: __init__.py  config.py  main.py
services/auth-service/src/auth_service/adapters/: __init__.py  database.py  repository.py
services/auth-service/src/auth_service/api/: __init__.py  auth_schemas.py  schemas.py
services/auth-service/src/auth_service/api/routes/: __init__.py  auth.py  guest.py  identity.py  users.py
services/auth-service/src/auth_service/core/: __init__.py  google_oauth.py  guest_session.py  password.py  tokens.py
services/auth-service/src/auth_service/domain/: __init__.py  models.py
services/auth-service/src/auth_service/middleware/: __init__.py  auth.py
services/auth-service/src/auth_service/services/: __init__.py  audit.py  email_verification.py
services/chunking-service/: Dockerfile  README.md  requirements.txt
services/chunking-service/app/: api.py  chunker.py  config.py  kafka_handler.py  main.py  schemas.py
services/extraction-service/: Dockerfile  pyproject.toml
services/extraction-service/src/extraction_service/: __init__.py  config.py  main.py
services/extraction-service/src/extraction_service/adapters/: __init__.py  database.py  kafka_handler.py  language.py  ocr.py  preprocessors.py  stt.py
services/extraction-service/src/extraction_service/domain/: __init__.py  models.py
services/extraction-service/src/extraction_service/services/: __init__.py  worker.py
services/ingestion-service/: Dockerfile  pyproject.toml  requirements.txt
services/ingestion-service/src/ingestion_service/: __init__.py  config.py  main.py
services/ingestion-service/src/ingestion_service/adapters/: __init__.py  database.py  repository.py  storage.py
services/ingestion-service/src/ingestion_service/api/: __init__.py  schemas.py
services/ingestion-service/src/ingestion_service/api/routes/: __init__.py  documents.py
services/ingestion-service/src/ingestion_service/domain/: __init__.py  events.py  models.py
services/ingestion-service/src/ingestion_service/middleware/: __init__.py  auth.py
services/ingestion-service/src/ingestion_service/services/: __init__.py  events.py  upload.py
services/language-service/: Dockerfile  pyproject.toml
services/language-service/src/language_service/: __init__.py  config.py  main.py
services/language-service/src/language_service/domain/: __init__.py  models.py
services/language-service/src/language_service/services/: __init__.py  detection.py  normalization.py  processor.py  translation.py
services/my-service/: Dockerfile  Makefile  pyproject.toml
services/my-service/src/service_name/: __init__.py  main.py
services/my-service/src/service_name/api/: schemas.py
services/my-service/tests/: conftest.py
services/pipeline-service/: Dockerfile  README.md  requirements.txt
services/pipeline-service/app/: api.py  config.py  main.py  models.py  pipeline.py
services/pipeline-service/app/stages/: __init__.py  chunking.py  embedding.py  extraction.py  normalization.py  storage.py
services/rag-service/: Dockerfile  README.md  requirements.txt
services/rag-service/app/: api.py  config.py  engine.py  main.py  models.py
services/rag-service/app/api/: guest_query.py
services/rag-service/app/middleware/: guest_aware.py
services/reasoning-service/: Dockerfile  README.md  requirements.txt
services/reasoning-service/app/: api.py  config.py  llm_client.py  logging.py  main.py  schemas.py
services/retrieval-service/: Dockerfile  README.md  requirements.txt
services/retrieval-service/app/: api.py  config.py  embeddings.py  kafka_handler.py  logging.py  main.py  qdrant_client.py  schemas.py
tools/scripts/: setup-database.ps1  setup-dev.ps1
(+119 files in other folders)
